// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component renders activity icon with default color 1`] = `
<svg
  className="Svg__SvgStyle-pyey0i-0 gYARyh"
  fill="none"
  height="24px"
  size={null}
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="22 12 18 12 15 21 9 3 6 12 2 12"
  />
</svg>
`;

exports[`Icon component renders arrow up icon with fill and stroke colors and stroke width 4 1`] = `
<svg
  className="Svg__SvgStyle-pyey0i-0 gYARyh"
  fill="#c00"
  height="24px"
  size={null}
  stroke="#0f9"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="4"
  viewBox="0 0 24 24"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="19"
    y2="5"
  />
  <polyline
    points="5 12 12 5 19 12"
  />
</svg>
`;

exports[`Icon component renders loader icon with pallete color and size 48 1`] = `
<svg
  className="Svg__SvgStyle-pyey0i-0 gYARyh"
  enableBackground="new 0 0 0 0"
  fill="none"
  height="48"
  size={null}
  stroke="#26e0cd"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 512 512"
  width="48"
  xmlSpace="preserve"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
    fill="#26e0cd"
  >
    <animateTransform
      attributeName="transform"
      attributeType="XML"
      dur="1s"
      from="0 256 256"
      repeatCount="indefinite"
      to="360 256 256"
      type="rotate"
    />
  </path>
</svg>
`;
